Fix issue where github icon wouldnt align properly

--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -336,7 +336,7 @@ a
 			.icons
 				// background-color: red
 				display: inline-block
-				width: 150px
+				width: 160px
 				margin: 0
 				margin-right: 10px
 				margin-bottom: 10px
